--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
               </div>
 
               <div class="blog__card">
-                <img src="./image/home/blog1.jpg" alt="blog1">
+                <img class="blog__img" src="./image/home/blog1.jpg" alt="blog1">
                 <span>Fashion</span>
                 <h4> 7 Boots to Invest This Winter</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -429,7 +429,7 @@
               </div>
 
               <div class="blog__card">
-                <img src="./image/home/blog2.jpg" alt="blog1">
+                <img class="blog__img" src="./image/home/blog2.jpg" alt="blog1">
                 <span>Fashion</span>
                 <h4> 5 Responsible Brands Making the Coziest Loungue Wear</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor </p>
@@ -438,7 +438,7 @@
               </div>
 
               <div class="blog__card">
-                <img src="./image/home/blog1.jpg" alt="blog1">
+                <img class="blog__img" src="./image/home/blog3.jpg" alt="blog1">
                 <span>Fashion</span>
                 <h4> 7 Winter Wardrobe Essentials to buy Now</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur </p>
