--- a/pdp.html
+++ b/pdp.html
@@ -144,36 +144,37 @@
 
                             <p class="price">$879.00</p>
                             <p class="pay">Pay as low as $49/mo <a href="#!">Learn More</a></p>
-                            <input type="checkbox"  id="check">
-                            <label class="pay" for="check">TW-29382-2</label>
+                            <input checked type="checkbox"  id="check">
+                            <label class="pay checkbox" for="check">TW-29382-2</label>
                             <div class="size">
-                              <h4>select size</h4>
+                              <h4>Select Size</h4>
                               <img src="./image/plp/down.svg" alt="down">
                             </div>
                               <a class="size__cta" href="#!">Size Guide</a>
-                              <p class="price">Color : White</p>
+                              <p class="price">Color : <span class="selected-color-text">White</span></p>
                               <ul class="colors">
-                                  <li>
-                                    <input type="radio" name="checkone" id="white">
+                                  <li class="colors__list">
+                                    <input checked type="radio" name="checkone" id="white">
+                                    <span class="white"></span>
                                     <label id="one" for="white"></label>
                                   </li>
-                                  <li>
+                                  <li class="colors__list">
                                     <input type="radio" name="checkone" id="black">
                                     <label id="two" for="black"></label>
                                   </li>
-                                  <li>
+                                  <li class="colors__list">
                                     <input type="radio" name="checkone" id="brown">
                                     <label id="three" for="brown"></label>
                                   </li>
                               </ul>
                               <button class="hero__cta">Add to Bag</button>
                               <ul class="hero__list">
-                                <li>Description</li>
-                                <li>Detail</li>
-                                <li>Shipping & Return</li>
-                                <li>The Brand</li>
+                                <li class="hero__tab tab__active">Description</li>
+                                <li class="hero__tab">Detail</li>
+                                <li class="hero__tab">Shipping & Return</li>
+                                <li class="hero__tab">The Brand</li>
                               </ul>
-                              <p class="pay"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              <p class="pay tab__content"> 1--Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.1</p>
 
                               <div class="sustainability">
                                 <h4>Sustainability</h4>
