--- a/plp.html
+++ b/plp.html
@@ -49,6 +49,12 @@
         <li class="modal__item"><a class="modal__link" href="#!">Cart</a></li>
       </ul>
     </div>
+    <div class="heart-modal-blur">
+      <i id="heart-close" class="fa-solid fa-xmark"></i>
+      <div class="heart-modal">
+
+      </div>
+    </div>
 
     <header class="header">
       <div class="container">
@@ -67,7 +73,8 @@
 
           <div class="header__cta">
             <img src="./image/home/account.svg" alt="account">
-            <img src="./image/home/heart.svg" alt="heart">
+            <img class="header__heart" src="./image/home/heart.svg" alt="heart">
+            <span class="heart__badge">0</span>  
             <img src="./image/home/bag.svg" alt="bag">
           </div>
              
@@ -223,9 +230,9 @@
                     </div>
 
                     <div class="product__list">
-
                     </div>
                 </div>
+
 
                 <div class="product__pagination">
                   <span>1</span>
